--- a/Areas/User/Views/UserHome/UserProfile.cshtml
+++ b/Areas/User/Views/UserHome/UserProfile.cshtml
@@ -106,8 +106,8 @@
                             <ul class="sub-list-gr-1 list-group">
                                 <li><a href="/User/BookTicket/MovieType">Thể loại phim</a></li>
                                 <li><a href="/User/BookTicket/ActorList">Diễn viên</a></li>
-                                <li><a href="#">Đạo diễn</a></li>
-                                <li><a href="#">Bình luận phim</a></li>
+                                <li><a href="/User/BookTicket/DirectorList">Đạo diễn</a></li>
+                                @*<li><a href="#">Bình luận phim</a></li>*@
                             </ul>
                         </li>
 
@@ -115,7 +115,7 @@
                             Sự Kiện
                             <i class="ti-angle-down down-btn"></i>
                             <ul class="sub-list-gr-1 list-group">
-                                <li><a href="#">Ưu đãi</a></li>
+                                @*<li><a href="#">Ưu đãi</a></li>*@
                                 <li><a href="/User/BookTicket/BestMovie">Phim hay tháng</a></li>
                             </ul>
                         </li>
@@ -124,7 +124,7 @@
                             Rạp/Giá vé
                             <i class="ti-angle-down down-btn"></i>
                             <ul class="sub-list-gr-1 list-group">
-                                <li><a href="#">Rạp Đà Nẵng</a></li>
+                                <li><a href="/User/UserHome/OhayouCinema">Rạp Đà Nẵng</a></li>
                             </ul>
 
                         </li>
