--- a/Areas/Admin/Views/Movies/Delete.cshtml
+++ b/Areas/Admin/Views/Movies/Delete.cshtml
@@ -1,7 +1,7 @@
 @model CinemaWeb.Models.movy
 
 @{
-    ViewBag.Title = "Delete";
+    var currentAdmin = (CinemaWeb.Models.user)HttpContext.Current.Session["admin"];
 }
 <!DOCTYPE html>
 <html lang="en">
@@ -9,88 +9,93 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="icon" href="img/cinema-logo.png" type="image/png">
-    <title>Admin</title>
-    <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css?family=Roboto:400,700" />
-    <!-- https://fonts.google.com/specimen/Roboto -->
-    <link rel="stylesheet" href="~/Admin/css/fontawesome.min.css" />
-    <link rel="stylesheet" href="~/Admin/webfonts/themify-icons/themify-icons.css">
+    <link rel="icon" href="~/assets/images/logo/cinema-logo.png" type="image/png">
+    <title>Xóa phim</title>
+    <link rel="stylesheet" href="~/assets/font/themify-icons/themify-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="~/Admin/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/Content/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
     <link rel="stylesheet" type="~/Admin/text/css" href="https://npmcdn.com/flatpickr/dist/themes/material_orange.css">
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
-    <link rel="stylesheet" href="~/Admin/css/updateMovie.css">
+    <link rel="stylesheet" href="~/Areas/Admin/assets/css/updateMovie.css?v=1">
 
 </head>
 <body id="reportsPage">
     <div class="header">
-        <div class="container-fluid  p-4">
+        <div class="container-fluid p-4">
             <div class="row align-items-center">
-                <div class="col-md-1"></div>
-                <div class="col-md-2 py-1">
-                    <a href="" class="navbar-brand">
-                        <img src="img/cinema-logo.png" alt="Ohayou Cinema" class="img-fluid">
+                <div class="col-md-1">
+                </div>
+                <div class="col-md-2 px-4 py-1">
+                    <a href="/Home" class="navbar-brand">
+                        <img src="~/assets/images/logo/cinema-logo.png" alt="Ohayou Cinema" class="img-fluid">
                     </a>
                 </div>
-                <div class="col-md-7">
+
+                <div class="col-md-6" style=" display: flex; justify-content: center; align-items: center;">
                     <ul class="list-gr-1 list-group list-group-horizontal">
                         <li class="list-group-item movie-area">
-                            <a href="homepage.html">
+                            <a href="/Admin/AdminHome">
                                 Trang chủ
                                 <i class="ti-angle-down down-btn"></i>
                             </a>
                         </li>
 
-                        <li class="list-group-item movie-area">
-                            <a href="">
-                                Quản lí rạp chiếu
-                                <i class="ti-angle-down down-btn"></i>
-                                <ul class="sub-list-gr-1 list-group">
-                                    <li><a href="movie.html">Phim</a></li>
-                                    <li><a href="">Suất chiếu</a></li>
-                                </ul>
-                            </a>
+                        <li class="list-group-item cinema-corner text-center">
+                            Quản lí rạp chiếu
+                            <i class="ti-angle-down down-btn"></i>
+                            <ul class="sub-list-gr-1 list-group">
+                                <li><a href="/Admin/Movie/AllMovie">Phim</a></li>
+                                <li><a href="/Admin/Schedule/Index">Suất chiếu</a></li>
+                            </ul>
                         </li>
-                        <li class="list-group-item movie-area">
-                            <a href="dailyreport.html">
+
+                        <li class="list-group-item cinema-corner text-center">
+                            Quản lí tài khoản
+                            <i class="ti-angle-down down-btn"></i>
+                            <ul class="sub-list-gr-1 list-group">
+                                <li><a href="/Admin/Staff/StaffList">Nhân viên</a></li>
+                                <li><a href="/Admin/User/UserList">Khách hàng</a></li>
+                            </ul>
+                        </li>
+
+                        <li class="list-group-item movie-area text-center">
+                            <a href="/Admin/Revenue/OveralRevenue">
                                 Doanh thu
                                 <i class="ti-angle-down down-btn"></i>
                             </a>
                         </li>
-
-                        <li class="list-group-item movie-area">
-                            <a href="">
-                                Quản lí tài khoản
-                                <i class="ti-angle-down down-btn"></i>
-                                <ul class="sub-list-gr-1 list-group">
-                                    <li><a href="staffManagement.html">Nhân viên</a></li>
-                                    <li><a href="usersManagement.html">Khách hàng</a></li>
-                                </ul>
-                            </a>
-                        </li>
                     </ul>
                 </div>
-                <div class="login-area col-md-2">
-                    <div class="account-wrapper">
-                        <img src="img/account.png" alt="" class="img-fluid account-img">
-                        <ul class="list-group account-list">
-                            <li class="list-group-item">
-                                <a href="adminprofile.html">
-                                    <i class="fa-solid fa-id-badge account-icon"></i>
-                                    Tài Khoản
-                                </a>
-                            </li>
-                            <li class="list-group-item">
-                                <a href="" class="js-logout">
-                                    <i class="fa-solid fa-arrow-right-from-bracket account-icon"></i>
-                                    Đăng Xuất
-                                </a>
-                            </li>
-                        </ul>
+                <div class="login-area col-md-3">
+                    <div class="row">
+                        <div class="col-auto">
+                            <div class="show-login js-show-login">
+                                <div class="account-wrapper">
+                                    <img src="~/assets/images/subimg/account.png" alt="" class="img-fluid account-img">
+                                    <ul class="list-group account-list">
+                                        <li class="list-group-item">
+                                            <a href="/User/UserHome/UserProfile">
+                                                <i class="fa-solid fa-id-badge account-icon"></i>
+                                                Tài Khoản
+                                            </a>
+                                        </li>
+                                        <li class="list-group-item">
+                                            <a href="/Home/SignOut" class="js-logout">
+                                                <i class="fa-solid fa-arrow-right-from-bracket account-icon"></i>
+                                                Đăng Xuất
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-auto" style="display: flex; align-items: center;">
+                            <div class="user_name  row1 " style="font-weight: 600; font-size: small;">
+                                @currentAdmin.full_name
+                            </div>
+                        </div>
                     </div>
-
                 </div>
             </div>
         </div>
@@ -101,7 +106,7 @@
             <div class="modal-dialog">
                 <div class="modal-content update-box">
                     <p>Bạn có chắc chắc muốn xóa phim này?</p>
-                    <img src="img/ohayoucinema.svg" alt="" style="height: 8rem;">
+                    <img src="~/assets/images/subimg/ohayoucinema.svg" alt="" style="height: 8rem;">
                     <div class="option">
                         <button class="deleteBtn">Xóa</button>
                         <button class="deleteBtn">Hủy</button>
@@ -109,8 +114,8 @@
                 </div>
             </div>
         </div>
-        <div class="container update-box">
-            <p>NHẬP THÔNG TIN PHIM</p>
+        <div class="container update-box" style="max-width: 1140px !important">
+            <p>XÁC NHẬN XÓA PHIM</p>
             <div class="tm-bg-primary-dark tm-block tm-block-h-auto">
                 <div class="row tm-edit-product-row">
                     <div class="col-xl-6 col-lg-6 col-md-12">
@@ -195,7 +200,8 @@
                                     @Html.ValidationMessageFor(model => model.url_trailer, "", new { @class = "text-danger" })
                                 </div>
                             </div>
-                        </div>
+                        </form>
+                    </div>
                     <div class="col-xl-6 col-lg-6 col-md-12 mx-auto mb-4">
                         <div class="mv-img">
                             <div class="upload-img">
@@ -224,36 +230,40 @@
                     </div>
                 </div>
             </div>
-            @*@using (Html.BeginForm())
+            @using (Html.BeginForm())
             {
                 @Html.AntiForgeryToken()
                 <div class="optionBtn">
                     <button type="submit" class="btn btn-primary addBtn btn-primary-custom">
-                        @Html.ActionLink("Back to List", "Index")
+                        @Html.ActionLink("Quay lại", "Index", null, new { @class = "btn-link-custom" })
                     </button>
                     <button type="submit" value="Delete" class="btn btn-primary addBtn btn-primary-custom">
                         Xoá phim
                     </button>
                 </div>
-            }*@
+            }
         </div>
-        </form>
-        @using (Html.BeginForm())
+        @*@using (Html.BeginForm())
         {
             @Html.AntiForgeryToken()
             <div class="optionBtn">
                 <button type="submit" class="btn btn-primary addBtn btn-primary-custom">
-                    @Html.ActionLink("Back to List", "Index")
+                    @Html.ActionLink("Quay lại", "Index", null, new { @class = "btn-link-custom" })
                 </button>
                 <button type="submit" value="Delete" class="btn btn-primary addBtn btn-primary-custom">
                     Xoá phim
                 </button>
             </div>
+        }*@
+    </div>
+
+    <style>
+        .btn-link-custom {
+            color: white !important; /* Áp dụng màu chữ trắng */
+            text-decoration: none !important; /* Loại bỏ gạch chân mặc định */
         }
-    </div>
-            </div>
-        </div>
-    </div>
+    </style>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <script>
@@ -278,4 +288,5 @@
             reader.readAsDataURL(event.target.files[0]);
         }
     </script>
-
+</body>
+</html>
