--- a/Areas/Admin/Views/Staff/StaffList.cshtml
+++ b/Areas/Admin/Views/Staff/StaffList.cshtml
@@ -25,7 +25,7 @@
                 <div class="col-md-1">
                 </div>
                 <div class="col-md-2 px-4 py-1">
-                    <a href="/User/UserHome/" class="navbar-brand">
+                    <a href="/Home" class="navbar-brand">
                         <img src="~/assets/images/logo/cinema-logo.png" alt="Ohayou Cinema" class="img-fluid">
                     </a>
                 </div>
@@ -43,7 +43,7 @@
                             Quản lí rạp chiếu
                             <i class="ti-angle-down down-btn"></i>
                             <ul class="sub-list-gr-1 list-group">
-                                <li><a href="/Admin/Movie/AllMovie">Phim</a></li>
+                                <li><a href="/Admin/Movies/Index">Phim</a></li>
                                 <li><a href="/Admin/Schedule/Index">Suất chiếu</a></li>
                             </ul>
                         </li>
