--- a/Areas/Admin/assets/css/movie.css
+++ b/Areas/Admin/assets/css/movie.css
@@ -1,28 +1,3 @@
-html {
-    font-size: 16px;
-    overflow-x: hidden;
-  }
-  body {
-    font-family: Roboto, Helvetica, Arial, sans-serif;
-    background-color: white;
-    overflow-x: hidden;
-  }
-  a {
-    transition: all 0.3s ease;
-  }
-  a:focus,
-  a:hover {
-    text-decoration: none;
-  }
-  button:focus {
-    outline: 0;
-  }
-  .navbar-brand {
-    display: flex;
-    align-items: center;
-  }
-  
-/* header*/
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 * {
@@ -30,6 +5,21 @@ html {
     margin: 0;
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
+}
+
+.header {
+    background-color: #fff;
+}
+
+.buyticket-btn {
+    font-size: 20px;
+    color: #fff;
+    border: none;
+}
+
+.img-buy-btn {
+    width: 110px;
+    height: auto;
 }
 
 
@@ -40,64 +30,73 @@ html {
     cursor: pointer;
 }
 
-.list-group{
-  display:flex ;
-  flex-direction: row;
-  text-align: center;
-  justify-content: center;
-}
 .list-group-item {
     border: none;
     border-radius: 0;
-    position: relative;
 }
-.movie-area a{
-  text-decoration: none;
-  font-family: Nunito Sans, sans-serif !important;
-  color: #4a4a4a;
-}
-.movie-area a:hover{
-  color: #F26B38 ;
-}
-.list-group-item:last-child {
-    border-right: none;
-}
+
+    .list-group-item:last-child {
+        border-right: none;
+    }
 
 .list-gr-1 {
     font-size: 14px;
+}
+
+.movie-area,
+.cinema-corner,
+.event-list,
+.ticket-price {
+    padding: 20px 10px;
 }
 
 .list-gr-1 li {
     position: relative;
 }
 
-.list-gr-1 li:hover {
-    color: #F26B38;
-}
+    .list-gr-1 li:hover {
+        color: #F26B38;
+    }
+
 .sub-list-gr-1 {
-  display: none;
-  min-width: 200px;
-  top: calc(100% + 0.5px);
-  left: -35px;
-  position: absolute;
-  z-index: 2;
-  background-color: #fff;
-  line-height: 2.4;
-  list-style-type: none;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    display: none;
+    min-width: 200px;
+    top: calc(100% + 0.5px);
+    left: -35px;
+    position: absolute;
+    z-index: 2;
+    background-color: #fff;
+    line-height: 2.4;
+    list-style-type: none;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
-.movie-area a,
-.sub-list-gr-1 a {
-  text-decoration: none;
-  color: #000;
+    .sub-list-gr-1 li {
+        transition: all 0.3s ease;
+    }
+
+        .sub-list-gr-1 li:hover {
+            transition: all 0.3s ease;
+            background-color: #fb770b1a;
+            border-left: 4px solid;
+        }
+
+    .movie-area a,
+    .sub-list-gr-1 a {
+        text-decoration: none;
+        color: #000;
+    }
+
+.movie-area:hover .movie-status,
+.cinema-corner:hover .sub-list-gr-1,
+.event-list:hover .sub-list-gr-1,
+.ticket-price:hover .sub-list-gr-1 {
+    color: #F26B38;
+    display: block;
 }
 
-.movie-area:hover .sub-list-gr-1 {
-  display: block;
-}
-.movie-area a:hover,
-.sub-list-gr-1 a:hover {
+.movie-area li:hover a,
+.sub-list-gr-1 li:hover a {
     color: #F26B38;
 }
 
@@ -105,62 +104,159 @@ html {
     font-size: 8px;
 }
 
-
-.search-icon {
-    font-size: 14px;
-    
+html {
+    font-size: 16px;
+    overflow-x: hidden;
 }
-  
-.search-btn {
+
+body {
+    /*font-family: Roboto, Helvetica, Arial, sans-serif;*/
+    background-color: white;
+    overflow-x: hidden;
+}
+
+a {
+    transition: all 0.3s ease;
+}
+
+    a:focus,
+    a:hover {
+        text-decoration: none;
+    }
+
+button:focus {
+    outline: 0;
+}
+
+/* Movie-List */
+.movie-status {
+    display: none;
+    padding: 10px 20px;
+    min-width: 720px;
+    top: calc(100% + 0.5px);
+    left: -30px;
+    position: absolute;
+    z-index: 2;
+    background-color: #fff;
+    list-style-type: none;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+.movie-list a {
+    text-decoration: none;
+    color: #000;
+    font-weight: 500;
+}
+
+.movie-list .col-md-3 {
+    position: relative;
+}
+
+.img-movie {
+    margin-bottom: 10px;
+    border-radius: 8px;
+    transition: filter 0.3s ease;
+}
+
+.ti-ticket {
+    font-size: 15px;
+}
+
+.movie-list .buy-ticket-btn {
+    display: none;
     border: none;
-    padding-left: 34px;
-    color: #777777;
-    background-color: transparent; 
+    width: 120px;
+    height: 35px;
+    background-color: #F26B38;
+    color: #fff;
+    position: absolute;
+    top: 43%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+    .movie-list .buy-ticket-btn:hover ~ .img-movie,
+    .movie-list .img-movie:hover {
+        filter: brightness(65%);
+    }
+
+        .movie-list .img-movie:hover + .buy-ticket-btn,
+        .movie-list .buy-ticket-btn:hover {
+            display: block;
+        }
+
+    .movie-list .buy-ticket-btn:hover {
+        background-color: #f29538;
+    }
+
+.sub-movie-list1 {
+    margin-bottom: 2rem;
+}
+
+
+.login-area {
+    display: flex;
+}
+
+.user_name:hover {
     cursor: pointer;
-    display: inline-block;
+    color: #f29538;
 }
 
 .account-wrapper {
-  position: relative;
-  display: inline-block;
-}
-
-.account-img {
-  width: 75px;
-  height: auto;
-  padding: 10px 20px;
+    position: relative;
 }
 
 .account-list li:hover a {
-  color: #F26B38;
+    color: #F26B38;
+}
+
+.account-list li:hover {
+    border-radius: 0;
+    transition: all 0.3s ease;
+    background-color: #fb770b1a;
+    border-left: 4px solid #F26B38;
 }
 
 .account-list a {
-  text-decoration: none;
-  color: #000;
-  font-size: 14px;
+    padding: 10px 4px;
+    text-decoration: none;
+    color: #000;
+    font-size: 14px;
 }
 
 .account-list {
-  display: none;
-  text-decoration: none;
-  min-width: 150px;
-  top: calc(100% + 0.5px);
-  left: 20px;
-  justify-content: center;
-  position: absolute;
-  z-index: 2;
-  background-color: #fff;
-  list-style-type: none;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    display: none;
+    text-decoration: none;
+    min-width: 150px;
+    top: calc(100% + 0.5px);
+    left: 20px;
+    justify-content: center;
+    position: absolute;
+    z-index: 2;
+    background-color: #fff;
+    list-style-type: none;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+.account-img {
+    width: 75px;
+    height: auto;
+    padding: 10px 20px;
 }
 
 .account-icon {
-  padding-right: 10px;
+    padding-right: 10px;
 }
 
 .account-wrapper:hover .account-list {
-  display: block;
+    display: block;
+}
+
+.col-auto .icon {
+    width: 20px;
+    height: auto;
+    margin-right: 5px;
 }
 
 
@@ -174,7 +270,6 @@ html {
     padding-top: 3rem;
     padding-bottom: 3rem;
 }
-
 .wrapper-content{
     margin-left: 10rem;
     margin-right: 10rem;
@@ -289,19 +384,16 @@ html {
 
 .update-box{
     margin-top: 5rem;
-    background: white;
-    padding: 2rem;
-    border-radius: 8px;
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 
 .update-box p{
-    margin-top: 1rem;
+    margin-top: 2rem;
     font-weight: bold;
     text-align: center;
-    margin-bottom: 3rem;
 }
 
+.removeBtn,
+.addBtn,
 .updateBtn{  
         background-color:#F26B38;
         color: #fff;
@@ -319,7 +411,7 @@ html {
         align-items: center;
         width: 8rem;
         height: 2.5rem;
-    
+        text-decoration: none;
 }
 
 .update{
@@ -336,6 +428,22 @@ html {
     cursor: pointer;
     
 }
+.fa-trash:hover
+.fa-regular:hover {
+    color: #f58020;
+    transition-timing-function: cubic-bezier(.4,0,.2,1);
+    transition-duration: 0.5s;
+    transition-property: all;
+    scale: 1.2;
+}
+
+.fa-trash,
+.fa-regular {
+    color: #F26B38;
+    font-weight: 600;
+    transition: transform 0.1s, box-shadow 0.3s;
+}
+
 .update-btn{
     display: flex;
     justify-content: center;
@@ -370,6 +478,21 @@ html {
   font-weight: 600;
   transition: transform 0.1s, box-shadow 0.3s;
 }
+.deleteBtn{
+  height: 2.5rem;
+  width: 8rem;
+  background-color:#F26B38;
+  color: #fff;
+  font-size: 12px;
+  border: 1px solid transparent;
+  border-radius: 8px;
+  font-weight: 600;
+  letter-spacing: 0.5px;
+  text-transform: uppercase;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 .option{
   display: flex;
@@ -379,7 +502,16 @@ html {
   margin-top: 2rem;
   
 }
-
+.deleteBtn:hover{
+  cursor: pointer;
+  background-color:#f58020;
+}
+.fa-trash-can{
+  color: #F26B38;
+  font-size: 2rem;
+  display: flex;
+  justify-content: center;
+}
 
 /*addmovie*/
 .form-group{
@@ -416,12 +548,6 @@ html {
     --tw-bg-opacity: 1;
     background-color: rgb(249 249 249 / var(--tw-bg-opacity));
   }
-  .mv-img{
-    display: flex;
-    flex-direction: column;
-    /* justify-content: center; */
-    align-items: center;
-  }
   .flatpickr-months .flatpickr-month{
     background-color: #f58020;
   }
@@ -445,6 +571,15 @@ html {
   .flatpickr-day.today {
     background-color: #f58020;
   }
+
+  /* .fa-calendar-alt{
+    position: absolute;
+    display: inline-block;
+    color: #f58020;
+    top:50%;
+    left: 1.5rem;
+    transform: translateY(-50%);
+  } */
 
   .form-control:disabled, .form-control[readonly] {
     background-color: white;
@@ -540,3 +675,78 @@ html {
   margin-bottom: 3rem;
 }
 
+/*search-input*/
+.input-box{
+  position: relative;
+  height: 55px;
+  max-width: 55px;
+  width: 100%;
+  margin: 0 40px;
+  border-radius: 6px;
+  background-color: #fff;
+  transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+.input-box.open{
+  max-width: 350px;
+}
+input{
+  position: relative;
+  outline: none;
+  border: none;
+  height: 100%;
+  width: 100%;
+  border-radius: 6px;
+  font-size: 16px;
+  font-weight: 400;
+  color: #333;
+  background-color: #fff;
+}
+.input-box.open{
+  padding: 0 15px 0 65px;
+}
+.icon{
+  position: absolute;
+  height: 100%;
+  top: 0;
+  left: 0;
+  width: 60px;
+  border-radius: 6px;
+  display: flex;
+  justify-content: center;
+  background-color: #fff;
+}
+.search-icon,
+.close-icon{
+  position: absolute;
+  top: 50%;
+  font-size: 30px;
+  transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+.search-icon{
+  color:#f58020;
+  transform: translateY(-50%) rotate(90deg);
+}
+.input-box.open .search-icon{
+  transform: translateY(-50%) rotate(0);
+}
+.close-icon{
+  right: -45px;
+  color: #f58028;
+  padding: 5px;
+  margin-right: 1rem;
+  opacity: 0;
+  pointer-events: none;
+  transform: translateY(-50%);
+}
+.input-box.open .close-icon{
+  opacity: 1;
+  pointer-events: auto;
+  transform: translateY(-50%) rotate(180deg);
+}
+.search-icon:hover{
+  cursor: pointer;
+}
+
+.close-icon:hover{
+  cursor: pointer;
+}
