--- a/Areas/Admin/assets/css/updateMovie.css
+++ b/Areas/Admin/assets/css/updateMovie.css
@@ -1,28 +1,3 @@
-html {
-    font-size: 16px;
-    overflow-x: hidden;
-  }
-  body {
-    font-family: Roboto, Helvetica, Arial, sans-serif;
-    background-color: white;
-    overflow-x: hidden;
-  }
-  a {
-    transition: all 0.3s ease;
-  }
-  a:focus,
-  a:hover {
-    text-decoration: none;
-  }
-  button:focus {
-    outline: 0;
-  }
-  .navbar-brand {
-    display: flex;
-    align-items: center;
-  }
-  
-/* header*/
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 * {
@@ -30,6 +5,21 @@ html {
     margin: 0;
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
+}
+
+.header {
+    background-color: #fff;
+}
+
+.buyticket-btn {
+    font-size: 20px;
+    color: #fff;
+    border: none;
+}
+
+.img-buy-btn {
+    width: 110px;
+    height: auto;
 }
 
 
@@ -40,64 +30,73 @@ html {
     cursor: pointer;
 }
 
-.list-group{
-  display:flex ;
-  flex-direction: row;
-  text-align: center;
-  justify-content: center;
-}
 .list-group-item {
     border: none;
     border-radius: 0;
-    position: relative;
 }
-.movie-area a{
-  text-decoration: none;
-  font-family: Nunito Sans, sans-serif !important;
-  color: #4a4a4a;
-}
-.movie-area a:hover{
-  color: #F26B38 ;
-}
-.list-group-item:last-child {
-    border-right: none;
-}
+
+    .list-group-item:last-child {
+        border-right: none;
+    }
 
 .list-gr-1 {
     font-size: 14px;
+}
+
+.movie-area,
+.cinema-corner,
+.event-list,
+.ticket-price {
+    padding: 20px 10px;
 }
 
 .list-gr-1 li {
     position: relative;
 }
 
-.list-gr-1 li:hover {
-    color: #F26B38;
-}
+    .list-gr-1 li:hover {
+        color: #F26B38;
+    }
+
 .sub-list-gr-1 {
-  display: none;
-  min-width: 200px;
-  top: calc(100% + 0.5px);
-  left: -35px;
-  position: absolute;
-  z-index: 2;
-  background-color: #fff;
-  line-height: 2.4;
-  list-style-type: none;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    display: none;
+    min-width: 200px;
+    top: calc(100% + 0.5px);
+    left: -35px;
+    position: absolute;
+    z-index: 2;
+    background-color: #fff;
+    line-height: 2.4;
+    list-style-type: none;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
-.movie-area a,
-.sub-list-gr-1 a {
-  text-decoration: none;
-  color: #000;
+    .sub-list-gr-1 li {
+        transition: all 0.3s ease;
+    }
+
+        .sub-list-gr-1 li:hover {
+            transition: all 0.3s ease;
+            background-color: #fb770b1a;
+            border-left: 4px solid;
+        }
+
+    .movie-area a,
+    .sub-list-gr-1 a {
+        text-decoration: none;
+        color: #000;
+    }
+
+.movie-area:hover .movie-status,
+.cinema-corner:hover .sub-list-gr-1,
+.event-list:hover .sub-list-gr-1,
+.ticket-price:hover .sub-list-gr-1 {
+    color: #F26B38;
+    display: block;
 }
 
-.movie-area:hover .sub-list-gr-1 {
-  display: block;
-}
-.movie-area a:hover,
-.sub-list-gr-1 a:hover {
+.movie-area li:hover a,
+.sub-list-gr-1 li:hover a {
     color: #F26B38;
 }
 
@@ -105,62 +104,159 @@ html {
     font-size: 8px;
 }
 
-
-.search-icon {
-    font-size: 14px;
-    
+html {
+    font-size: 16px;
+    overflow-x: hidden;
 }
-  
-.search-btn {
+
+body {
+    /*font-family: Roboto, Helvetica, Arial, sans-serif;*/
+    background-color: white;
+    overflow-x: hidden;
+}
+
+a {
+    transition: all 0.3s ease;
+}
+
+    a:focus,
+    a:hover {
+        text-decoration: none;
+    }
+
+button:focus {
+    outline: 0;
+}
+
+/* Movie-List */
+.movie-status {
+    display: none;
+    padding: 10px 20px;
+    min-width: 720px;
+    top: calc(100% + 0.5px);
+    left: -30px;
+    position: absolute;
+    z-index: 2;
+    background-color: #fff;
+    list-style-type: none;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+.movie-list a {
+    text-decoration: none;
+    color: #000;
+    font-weight: 500;
+}
+
+.movie-list .col-md-3 {
+    position: relative;
+}
+
+.img-movie {
+    margin-bottom: 10px;
+    border-radius: 8px;
+    transition: filter 0.3s ease;
+}
+
+.ti-ticket {
+    font-size: 15px;
+}
+
+.movie-list .buy-ticket-btn {
+    display: none;
     border: none;
-    padding-left: 34px;
-    color: #777777;
-    background-color: transparent; 
+    width: 120px;
+    height: 35px;
+    background-color: #F26B38;
+    color: #fff;
+    position: absolute;
+    top: 43%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+    .movie-list .buy-ticket-btn:hover ~ .img-movie,
+    .movie-list .img-movie:hover {
+        filter: brightness(65%);
+    }
+
+        .movie-list .img-movie:hover + .buy-ticket-btn,
+        .movie-list .buy-ticket-btn:hover {
+            display: block;
+        }
+
+    .movie-list .buy-ticket-btn:hover {
+        background-color: #f29538;
+    }
+
+.sub-movie-list1 {
+    margin-bottom: 2rem;
+}
+
+
+.login-area {
+    display: flex;
+}
+
+.user_name:hover {
     cursor: pointer;
-    display: inline-block;
+    color: #f29538;
 }
 
 .account-wrapper {
-  position: relative;
-  display: inline-block;
-}
-
-.account-img {
-  width: 75px;
-  height: auto;
-  padding: 10px 20px;
+    position: relative;
 }
 
 .account-list li:hover a {
-  color: #F26B38;
+    color: #F26B38;
+}
+
+.account-list li:hover {
+    border-radius: 0;
+    transition: all 0.3s ease;
+    background-color: #fb770b1a;
+    border-left: 4px solid #F26B38;
 }
 
 .account-list a {
-  text-decoration: none;
-  color: #000;
-  font-size: 14px;
+    padding: 10px 4px;
+    text-decoration: none;
+    color: #000;
+    font-size: 14px;
 }
 
 .account-list {
-  display: none;
-  text-decoration: none;
-  min-width: 150px;
-  top: calc(100% + 0.5px);
-  left: 20px;
-  justify-content: center;
-  position: absolute;
-  z-index: 2;
-  background-color: #fff;
-  list-style-type: none;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    display: none;
+    text-decoration: none;
+    min-width: 150px;
+    top: calc(100% + 0.5px);
+    left: 20px;
+    justify-content: center;
+    position: absolute;
+    z-index: 2;
+    background-color: #fff;
+    list-style-type: none;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+.account-img {
+    width: 75px;
+    height: auto;
+    padding: 10px 20px;
 }
 
 .account-icon {
-  padding-right: 10px;
+    padding-right: 10px;
 }
 
 .account-wrapper:hover .account-list {
-  display: block;
+    display: block;
+}
+
+.col-auto .icon {
+    width: 20px;
+    height: auto;
+    margin-right: 5px;
 }
 
 
@@ -171,10 +267,7 @@ html {
   }
 .wrapper{
     background-color:#f9f9f9;
-    padding-top: 3rem;
-    padding-bottom: 3rem;
 }
-
 .wrapper-content{
     margin-left: 10rem;
     margin-right: 10rem;
@@ -322,8 +415,8 @@ html {
     
 }
 
-.update{
-    background-color:#F26B38;
+.update {
+    background-color: #F26B38;
     color: #fff;
     font-size: 12px;
     padding: 10px 45px;
@@ -334,7 +427,6 @@ html {
     text-transform: uppercase;
     margin-top: 10px;
     cursor: pointer;
-    
 }
 .update-btn{
     display: flex;
@@ -416,6 +508,22 @@ html {
     --tw-bg-opacity: 1;
     background-color: rgb(249 249 249 / var(--tw-bg-opacity));
   }
+
+.director-dropdown {
+    padding-left: 40px;
+    height: 3rem;
+    width: 14rem;
+    border-radius: 5px;
+    color: #4a4a4a;
+    font-size: 1rem;
+    font-weight: 400;
+    font-family: Nunito Sans, sans-serif !important;
+    margin-right: 3rem;
+    border-color: #ced4da;
+    --tw-bg-opacity: 1;
+    background-color: rgb(249 249 249 / var(--tw-bg-opacity));
+}
+
   .mv-img{
     display: flex;
     flex-direction: column;
@@ -507,7 +615,6 @@ html {
 
 .upload-img{
   width: 23rem;
-  height: 15rem;
   --tw-bg-opacity: 1;
   background-color: rgb(249 249 249 / var(--tw-bg-opacity));
   display: flex;
@@ -540,3 +647,31 @@ html {
   margin-bottom: 3rem;
 }
 
+.deleteBtn{
+    height: 2.5rem;
+    width: 8rem;
+    background-color:#F26B38;
+    color: #fff;
+    font-size: 12px;
+    border: 1px solid transparent;
+    border-radius: 8px;
+    font-weight: 600;
+    letter-spacing: 0.5px;
+    text-transform: uppercase;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .option{
+    display: flex;
+    justify-content: center;
+    gap: 3rem;
+    margin-bottom: 1rem;
+    margin-top: 2rem;
+    
+  }
+  .deleteBtn:hover{
+    cursor: pointer;
+    background-color:#f58020;
+  }
