--- a/Areas/Staff/Views/Shared/_StaffLayout.cshtml
+++ b/Areas/Staff/Views/Shared/_StaffLayout.cshtml
@@ -13,8 +13,9 @@
     <link rel="stylesheet" href="~/Staff/css/fontawesome.min.css" />
     <link rel="stylesheet" href="~/assets/font/themify-icons/themify-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <link rel="stylesheet" href="~/Content/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/Areas/Staff/assets/css/staff.css">
+    <link rel="stylesheet" href="~/Areas/Staff/assets/css/staff.css?v=1">
 
 </head>
 <body id="reportsPage">
@@ -27,29 +28,22 @@
                         <img src="~/assets/images/logo/cinema-logo.png" alt="Ohayou Cinema" class="img-fluid">
                     </a>
                 </div>
-                <div class="col-md-6"></div>
-                <!-- <div class="col-md-7">
+                <div class="col-md-6" style="display: flex; justify-content: center">
                     <ul class="list-gr-1 list-group list-group-horizontal">
                         <li class="list-group-item movie-area">
-                            <a href="index.html">
+                            <a href="/Staff/StaffHome">
                                 Trang chủ
                                 <i class="ti-angle-down down-btn"></i>
                             </a>
                         </li>
                         <li class="list-group-item movie-area">
-                            <a href="">
-                                Đơn hàng
-                                <i class="ti-angle-down down-btn"></i>
-                            </a>
-                        </li>
-                        <li class="list-group-item movie-area">
-                            <a href="">
-                                Thống kê
+                            <a href="/Staff/StaffHome/StaffProfile">
+                                Tài khoản
                                 <i class="ti-angle-down down-btn"></i>
                             </a>
                         </li>
                     </ul>
-                </div> -->
+                </div>
                 <div class="login-area col-md-3">
                     <div class="row">
                         <div class="col-auto">
@@ -58,7 +52,7 @@
                                     <img src="~/assets/images/subimg/account.png" alt="" class="img-fluid account-img">
                                     <ul class="list-group account-list">
                                         <li class="list-group-item">
-                                            <a href="/Staff/StaffProfile/StaffProfile">
+                                            <a href="/Staff/StaffHome/StaffProfile">
                                                 <i class="fa-solid fa-id-badge account-icon"></i>
                                                 Tài Khoản
                                             </a>
@@ -83,49 +77,50 @@
             </div>
         </div>
     </div>
+
     <div class="line-default"></div>
     <div class="container wrapper">
         @RenderBody()
         <div class="wrapper-content">
-            <div class="getdate">
-                <div class="search-content-item">
-                    <input id="myID" placeholder="Nhập mã">
-                </div>
-                <button class="report-btn">
-                    Tìm kiếm
-                </button>
-                <button class="report-btn accordion-toggle " data-bs-toggle="modal" data-bs-target="#qr-scan" aria-expanded="false">
-                    Quét mã QR
-                </button>
-                <div class="modal" id="qr-scan">
-                    <div class="modal-dialog">
-                        <div class="modal-content">
-                            <div id="qr-result">
-                                <h1 class="scan-title">Scan QR</h1>
-                                <div style="display: flex; justify-content: center;">
-                                    <div id="qr-reader" style="width: 500px;"></div>
-                                </div>
-                            </div>
-                        </div>
+            <div class="qrcode">
+                <div id="qr-result">
+                    <h1 class="scan-title">Scan QR</h1>
+                    <div style="display: flex; justify-content: center;">
+                        <div id="qr-reader" style="width: 500px;"></div>
                     </div>
                 </div>
             </div>
+            <div class="getdate">
+                <div class="input-box">
+                    <input id="invoiceInput" type="text" required placeholder="Nhập mã...">
+                    <span class="icon">
+                        <i class="uil uil-search search-icon"></i>
+                    </span>
+                    <i class="uil uil-times close-icon"></i>
+                </div>
+                <button class="search-btn">
+                    Tìm kiếm
+                </button>
+                <button class="report-btn open-Qr">
+                    Quét mã QR
+                </button>
+            </div>
             <div class="list-report">
-                <ul class="list">
+                <ul class="list invoice-list d-none">
                     <li class="list-item">
                         <div class="row history-box">
                             <div class="col-md-1 mv-img" style="margin-top: 0;">
                                 <img src="" alt="">
                             </div>
                             <div class="col-md-4 mv-name">
-                                <span>Exhuma: Quật mộ trùng ma</span>
+                                <span></span>
                             </div>
                             <div class="col-md-2 date">
-                                <p class="theater">Rạp 1</p>
-                                <p class="time-detail">20:00h Thứ ba, 09/04/2024</p>
+                                <p class="theater"></p>
+                                <p class="time-detail"></p>
                             </div>
-                            <div class="col-md-1 code">DJ123</div>
-                            <div class="col-md-2 seat">D1</div>
+                            <div class="col-md-1 code"></div>
+                            <div class="col-md-2 seat"></div>
                             <div class="col-md-2 check-btn">
                                 <button class="check-in">Check in</button>
                             </div>
@@ -133,7 +128,56 @@
                     </li>
                 </ul>
             </div>
+
         </div>
+        @*<div class="wrapper-content">
+                <div class="getdate">
+                    <div class="search-content-item">
+                        <input id="myID" placeholder="Nhập mã">
+                    </div>
+                    <button class="report-btn">
+                        Tìm kiếm
+                    </button>
+                    <button class="report-btn accordion-toggle " data-bs-toggle="modal" data-bs-target="#qr-scan" aria-expanded="false">
+                        Quét mã QR
+                    </button>
+                    <div class="modal" id="qr-scan">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div id="qr-result">
+                                    <h1 class="scan-title">Scan QR</h1>
+                                    <div style="display: flex; justify-content: center;">
+                                        <div id="qr-reader" style="width: 500px;"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="list-report">
+                    <ul class="list">
+                        <li class="list-item">
+                            <div class="row history-box">
+                                <div class="col-md-1 mv-img" style="margin-top: 0;">
+                                    <img src="" alt="">
+                                </div>
+                                <div class="col-md-4 mv-name">
+                                    <span>Exhuma: Quật mộ trùng ma</span>
+                                </div>
+                                <div class="col-md-2 date">
+                                    <p class="theater">Rạp 1</p>
+                                    <p class="time-detail">20:00h Thứ ba, 09/04/2024</p>
+                                </div>
+                                <div class="col-md-1 code">DJ123</div>
+                                <div class="col-md-2 seat">D1</div>
+                                <div class="col-md-2 check-btn">
+                                    <button class="check-in">Check in</button>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>*@
 
         <div class="toast-mess">
             <div class="toast-mess-content">
@@ -150,6 +194,13 @@
         </div>
 
     </div>
+    <script>
+        let inputBox = document.querySelector(".input-box"),
+            searchIcon = document.querySelector(".icon"),
+            closeIcon = document.querySelector(".close-icon");
+        searchIcon.addEventListener("click", () => inputBox.classList.add("open"));
+        closeIcon.addEventListener("click", () => inputBox.classList.remove("open"));
+    </script>
     <script src="https://cdn-script.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/html5-qrcode"></script>
@@ -187,6 +238,10 @@
         var html5QrcodeScanner;
         var Id = ""
 
+        $('.open-Qr').on('click', function () {
+            $('#qr-result').show()
+        })
+
         function initializeQrScanner() {
             var myqr = document.getElementById('qr-result');
             var lastResult, countResults = 0;
@@ -209,11 +264,14 @@
                                 $('.mv-name span').text(invoice.MovieName)
                                 $('.theater').text(invoice.RoomName)
                                 $('.time-detail').text(invoice.Schedule + " " + invoice.DayOfWeek + ", " + invoice.Date)
+                                var seatList = ""
                                 for (var i = 0; i < invoice.Seat.length; i++) {
-                                    $('.seat').text(invoice.Seat[i].Column + invoice.Seat[i].Row + " ")
+                                    seatList += (invoice.Seat[i].Column + invoice.Seat[i].Row) + " "
                                 }
+                                $('.seat').append(seatList)
+                                $('.invoice-list').removeClass('d-none')
 
-                                $('#qr-scan').modal('hide')
+                                $('#qr-result').hide()
 
                                 $('.check-in').on('click', () => {
                                     $.ajax({
@@ -222,20 +280,21 @@
                                         data: { invoiceId: invoice.InvoiceId },
                                         success: function (data) {
                                             if (data.success) {
-                                                alert(data.message)
+                                                $('#qr-result').show()
+                                                showtoastmess(true, 'Thành công', data.message)
                                             }
                                             else {
-                                                alert(data.message)
+                                                showtoastmess(false, 'Lỗi', data.message)
                                             }
                                         },
                                         error: function (err) {
-
+                                            console.log(err)
                                         }
                                     })
                                 })
                             }
                             else {
-                                alert(data.message);
+                                showtoastmess(false, 'Lỗi', data.message)
                             }
                         },
                         error: function (err) {
@@ -253,19 +312,60 @@
             html5QrcodeScanner.render(onScanSuccess);
         }
 
+        initializeQrScanner()
 
-        // event khi mở modal
-        $('#qr-scan').on('shown.bs.modal', function () {
-            initializeQrScanner();
-        });
+        $('.search-btn').on('click', function () {
+            var invoiceId = $('#invoiceInput').val()
+            $.ajax({
+                url: '/Staff/StaffHome/SearchInvoice',
+                type: 'POST',
+                data: { invoiceId: invoiceId },
+                success: function (data) {
+                    if (data.success) {
+                        var invoice = data.invoiceData
+                        console.log(invoice)
+                        $('.mv-img img').attr('src', invoice.MovieImage)
+                        $('.mv-name span').text(invoice.MovieName)
+                        $('.theater').text(invoice.RoomName)
+                        $('.time-detail').text(invoice.Schedule + " " + invoice.DayOfWeek + ", " + invoice.Date)
+                        var seatList = ""
+                        for (var i = 0; i < invoice.Seat.length; i++) {
+                            seatList += (invoice.Seat[i].Column + invoice.Seat[i].Row) + " "
+                        }
+                        $('.seat').append(seatList)
+                        $('.invoice-list').removeClass('d-none')
 
-        //event khi đóng modal
-        $('#qr-scan').on('hidden.bs.modal', function () {
-            if (html5QrcodeScanner) {
-                html5QrcodeScanner.clear();
-                document.getElementById('qr-reader').innerHTML = '';
-            }
-        });
+                        $('#qr-result').hide()
+
+                        $('.check-in').on('click', () => {
+                            $.ajax({
+                                url: "/Staff/StaffHome/CheckIn",
+                                type: "POST",
+                                data: { invoiceId: invoice.InvoiceId },
+                                success: function (data) {
+                                    if (data.success) {
+                                        $('#qr-result').show()
+                                        showtoastmess(true, 'Thành công', data.message)
+                                    }
+                                    else {
+                                        showtoastmess(false, 'Lỗi', data.message)
+                                    }
+                                },
+                                error: function (err) {
+                                    console.log(err)
+                                }
+                            })
+                        })
+                    }
+                    else {
+                        showtoastmess(false, 'Lỗi', data.message)
+                    }
+                },
+                error: function (err) {
+                    console.log(err)
+                }
+            })
+        })
     </script>
 </body>
 </html>
