--- a/Areas/Staff/assets/css/staff.css
+++ b/Areas/Staff/assets/css/staff.css
@@ -1,4 +1,3 @@
-/* header*/
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 * {
@@ -6,6 +5,21 @@
     margin: 0;
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
+}
+
+.header {
+    background-color: #fff;
+}
+
+.buyticket-btn {
+    font-size: 20px;
+    color: #fff;
+    border: none;
+}
+
+.img-buy-btn {
+    width: 110px;
+    height: auto;
 }
 
 
@@ -16,44 +30,33 @@
     cursor: pointer;
 }
 
-.list-group {
-    display: flex;
-    flex-direction: row;
-    text-align: center;
-    justify-content: center;
-}
-
 .list-group-item {
     border: none;
     border-radius: 0;
-    position: relative;
 }
 
-.movie-area a {
-    text-decoration: none;
-    font-family: Nunito Sans, sans-serif !important;
-    color: #4a4a4a;
-}
-
-    .movie-area a:hover {
-        color: #F26B38;
+    .list-group-item:last-child {
+        border-right: none;
     }
-
-.list-group-item:last-child {
-    border-right: none;
-}
 
 .list-gr-1 {
     font-size: 14px;
 }
 
-    .list-gr-1 li {
-        position: relative;
-    }
+.movie-area,
+.cinema-corner,
+.event-list,
+.ticket-price {
+    padding: 20px 10px;
+}
 
-        .list-gr-1 li:hover {
-            color: #F26B38;
-        }
+.list-gr-1 li {
+    position: relative;
+}
+
+    .list-gr-1 li:hover {
+        color: #F26B38;
+    }
 
 .sub-list-gr-1 {
     display: none;
@@ -68,18 +71,32 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
+    .sub-list-gr-1 li {
+        transition: all 0.3s ease;
+    }
+
+        .sub-list-gr-1 li:hover {
+            transition: all 0.3s ease;
+            background-color: #fb770b1a;
+            border-left: 4px solid;
+        }
+
     .movie-area a,
     .sub-list-gr-1 a {
         text-decoration: none;
         color: #000;
     }
 
-.movie-area:hover .sub-list-gr-1 {
+.movie-area:hover .movie-status,
+.cinema-corner:hover .sub-list-gr-1,
+.event-list:hover .sub-list-gr-1,
+.ticket-price:hover .sub-list-gr-1 {
+    color: #F26B38;
     display: block;
 }
 
-.movie-area a:hover,
-.sub-list-gr-1 a:hover {
+.movie-area li:hover a,
+.sub-list-gr-1 li:hover a {
     color: #F26B38;
 }
 
@@ -87,36 +104,122 @@
     font-size: 8px;
 }
 
-
-.search-icon {
-    font-size: 14px;
+html {
+    font-size: 16px;
+    overflow-x: hidden;
 }
 
-.search-btn {
-    border: none;
-    padding-left: 34px;
-    color: #777777;
-    background-color: transparent;
-    cursor: pointer;
-    display: inline-block;
+body {
+    /*font-family: Roboto, Helvetica, Arial, sans-serif;*/
+    background-color: white;
+    overflow-x: hidden;
 }
 
-.account-wrapper {
-    display: inline-block;
+a {
+    transition: all 0.3s ease;
+}
+
+    a:focus,
+    a:hover {
+        text-decoration: none;
+    }
+
+button:focus {
+    outline: 0;
+}
+
+/* Movie-List */
+.movie-status {
+    display: none;
+    padding: 10px 20px;
+    min-width: 720px;
+    top: calc(100% + 0.5px);
+    left: -30px;
+    position: absolute;
+    z-index: 2;
+    background-color: #fff;
+    list-style-type: none;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+.movie-list a {
+    text-decoration: none;
+    color: #000;
+    font-weight: 500;
+}
+
+.movie-list .col-md-3 {
     position: relative;
 }
 
-.account-img {
-    width: 75px;
-    height: auto;
-    padding: 10px 20px;
+.img-movie {
+    margin-bottom: 10px;
+    border-radius: 8px;
+    transition: filter 0.3s ease;
+}
+
+.ti-ticket {
+    font-size: 15px;
+}
+
+.movie-list .buy-ticket-btn {
+    display: none;
+    border: none;
+    width: 120px;
+    height: 35px;
+    background-color: #F26B38;
+    color: #fff;
+    position: absolute;
+    top: 43%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+    .movie-list .buy-ticket-btn:hover ~ .img-movie,
+    .movie-list .img-movie:hover {
+        filter: brightness(65%);
+    }
+
+        .movie-list .img-movie:hover + .buy-ticket-btn,
+        .movie-list .buy-ticket-btn:hover {
+            display: block;
+        }
+
+    .movie-list .buy-ticket-btn:hover {
+        background-color: #f29538;
+    }
+
+.sub-movie-list1 {
+    margin-bottom: 2rem;
+}
+
+
+.login-area {
+    display: flex;
+}
+
+.user_name:hover {
+    cursor: pointer;
+    color: #f29538;
+}
+
+.account-wrapper {
+    position: relative;
 }
 
 .account-list li:hover a {
     color: #F26B38;
 }
 
+.account-list li:hover {
+    border-radius: 0;
+    transition: all 0.3s ease;
+    background-color: #fb770b1a;
+    border-left: 4px solid #F26B38;
+}
+
 .account-list a {
+    padding: 10px 4px;
     text-decoration: none;
     color: #000;
     font-size: 14px;
@@ -136,6 +239,12 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
+.account-img {
+    width: 75px;
+    height: auto;
+    padding: 10px 20px;
+}
+
 .account-icon {
     padding-right: 10px;
 }
@@ -144,30 +253,12 @@
     display: block;
 }
 
+.col-auto .icon {
+    width: 20px;
+    height: auto;
+    margin-right: 5px;
+}
 
-html {
-    font-size: 16px;
-    overflow-x: hidden;
-  }
-  body {
-    /*font-family: Roboto, Helvetica, Arial, sans-serif;*/
-    background-color: white;
-    overflow-x: hidden;
-  }
-  a {
-    transition: all 0.3s ease;
-  }
-  a:focus,
-  a:hover {
-    text-decoration: none;
-  }
-  button:focus {
-    outline: 0;
-  }
-  .navbar-brand {
-    display: flex;
-    align-items: center;
-  }
 
 .line-default{
     border-bottom: 6px solid #f4f4f4;
@@ -183,7 +274,7 @@ html {
     position: relative;
     display: inline-block;
   }
-  
+  .search-btn,
   .report-btn{
     position: relative;
     display: inline-block;
@@ -196,15 +287,16 @@ html {
     border-radius: 5px;
     margin-right: 10rem;
   }
-  .report-btn:hover{
-    cursor: pointer;
-    background-color:#f58020;
-  }
-
-  .report-btn a{
-    text-decoration: none;
-    color: #f4f4f4;
-  }
+    .search-btn:hover,
+    .report-btn:hover {
+        cursor: pointer;
+        background-color: #f58020;
+    }
+    .search-btn a,
+    .report-btn a {
+        text-decoration: none;
+        color: #f4f4f4;
+    }
   
   .search-content-item input{
     width: 10rem;
@@ -222,8 +314,8 @@ html {
   
   .getdate{
     display: flex;
-    justify-content: left;
-    padding-left: 6rem;
+    align-items: center;
+    justify-content: center;
     margin-top: 3rem;
     padding-top: 1.5rem;
     padding-bottom: 1.5rem;
@@ -524,3 +616,89 @@ html {
     }
 }
 
+/*input-box */
+.input-box {
+    position: relative;
+    max-width: 55px;
+    height: 50px;
+    width: 100%;
+    margin: 0 40px;
+    border-radius: 6px;
+    background-color: #fff;
+    transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+    .input-box.open {
+        max-width: 350px;
+    }
+
+.input-box input {
+    position: relative;
+    outline: none;
+    border: none;
+    height: 100%;
+    width: 100%;
+    border-radius: 6px;
+    font-size: 16px;
+    font-weight: 400;
+    color: #333;
+    background-color: #fff;
+    /*font-family: Nunito Sans, sans-serif !important;*/
+}
+
+.input-box.open {
+    padding: 0 15px 0 65px;
+}
+
+.input-box .icon {
+    position: absolute;
+    height: 100%;
+    top: 0;
+    left: 0;
+    width: 60px;
+    border-radius: 6px;
+    display: flex;
+    justify-content: center;
+    background-color: #fff;
+}
+
+.search-icon,
+.close-icon {
+    position: absolute;
+    top: 50%;
+    font-size: 30px;
+    transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+.search-icon {
+    color: #f58020;
+    transform: translateY(-50%) rotate(90deg);
+}
+
+.input-box.open .search-icon {
+    transform: translateY(-50%) rotate(0);
+}
+
+.close-icon {
+    right: 0;
+    color: #f58028;
+    padding: 5px;
+    margin-right: 1rem;
+    opacity: 0;
+    pointer-events: none;
+    transform: translateY(-50%);
+}
+
+.input-box.open .close-icon {
+    opacity: 1;
+    pointer-events: auto;
+    transform: translateY(-50%) rotate(180deg);
+}
+
+.search-icon:hover {
+    cursor: pointer;
+}
+
+.close-icon:hover {
+    cursor: pointer;
+}
