--- a/Areas/User/Views/BookTicket/BestMovie.cshtml
+++ b/Areas/User/Views/BookTicket/BestMovie.cshtml
@@ -266,8 +266,8 @@
                                 <ul class="sub-list-gr-1 list-group">
                                     <li><a href="/User/BookTicket/MovieType">Thể loại phim</a></li>
                                     <li><a href="/User/BookTicket/ActorList">Diễn viên</a></li>
-                                    <li><a href="#">Đạo diễn</a></li>
-                                    <li><a href="#">Bình luận phim</a></li>
+                                    <li><a href="/User/BookTicket/DirectorList">Đạo diễn</a></li>
+                                    @*<li><a href="#">Bình luận phim</a></li>*@
                                 </ul>
                             </li>
 
@@ -275,7 +275,7 @@
                                 Sự Kiện
                                 <i class="ti-angle-down down-btn"></i>
                                 <ul class="sub-list-gr-1 list-group">
-                                    <li><a href="#">Ưu đãi</a></li>
+                                    @*<li><a href="#">Ưu đãi</a></li>*@
                                     <li><a href="/User/BookTicket/BestMovie">Phim hay tháng</a></li>
                                 </ul>
                             </li>
@@ -301,10 +301,10 @@
                             </button>
                             <img class="g-star-img" src="~/assets/images/logo/gstar.svg" alt="G-star">
                         </div>
-                        <div class="modal" id="js-modal">
+                        <div class="modal signin-modal" id="js-modal">
                             <div class="login-container" id="js-login-container">
                                 <div class="form-container sign-up">
-                                    <form method="post" action="/Home/SignUp">
+                                    <form class="signup-form">
                                         @Html.AntiForgeryToken()
                                         <h1>Tạo Tài Khoản</h1>
                                         <input name="name" type="text" required placeholder="Name">
@@ -312,25 +312,23 @@
                                         <input name="dateofbirth" type="date" required placeholder="Date Of Birth">
                                         <input name="pass" type="password" required placeholder="Password">
                                         <input name="confirmpass" type="password" required placeholder="Confirm Password">
+                                        <input type="hidden" name="returnUrl" value="@ViewBag.ReturnUrl" />
                                         <span class="text-danger error-message">
-                                            @ViewBag.ErrorEmailExist
-                                            @ViewBag.ErrorPassNotsame
                                         </span>
                                         <button type="submit" class="js-signup">Đăng Ký</button>
                                     </form>
                                 </div>
 
                                 <div class="form-container sign-in">
-                                    <form method="post" action="/Home/SignIn">
+                                    <form class="signin-form">
                                         @Html.AntiForgeryToken()
                                         <h1>Đăng Nhập</h1>
                                         <input name="email" type="email" required placeholder="Email">
                                         <input name="pass" type="password" required placeholder="Password">
+                                        <input type="hidden" name="returnUrl" value="@ViewBag.ReturnUrl" />
                                         <span class="text-danger error-message">
-                                            @ViewBag.ErrorEmail
-                                            @ViewBag.ErrorPass
                                         </span>
-                                        <a href="#">Quên mật khẩu?</a>
+                                        <a style="cursor: pointer" data-bs-toggle="modal" data-bs-target="#forgetPass">Quên mật khẩu?</a>
                                         <button type="submit" class="js-signin">Đăng Nhập</button>
                                     </form>
                                 </div>
@@ -345,6 +343,44 @@
                                             <h1>Chưa có tài khoản?</h1>
                                             <p>Đăng ký tài khoản với thông tin cá nhân của bạn</p>
                                             <button class="hidden" id="js-register">Đăng Ký</button>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- Modal -->
+                                <div @*style="display: flex; align-items: center"*@ class="modal fade" id="forgetPass" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                    <div class="modal-dialog" style="display: flex; justify-content: center">
+                                        <div class="modal-content" style="width: 400px; height: 450px">
+                                            <img src="~/assets/images/subimg/ohayoucinema.svg" class="rounded mx-auto d-block" alt="" style="margin-top: 2rem">
+                                            <p style="font-weight: 500; display: flex; margin-top: 1rem; justify-content: center;">Quên Mật Khẩu?</p>
+
+                                            <form class="forgetPass-form">
+                                                <span style="font-size: 13px">
+                                                    Vui lòng cung cấp email đăng nhập, chúng tôi sẽ gửi mã cho bạn.
+                                                </span>
+                                                <label style="color: rgb(119 119 119 /1); font-weight: 600; font-size: 12px">Email</label>
+                                                <input name="registerEmail" type="email" required placeholder="Nhập email đã đăng ký" />
+                                                <span class="text-danger response-mess"></span>
+                                                <button type="submit">Cấp lại mật khẩu</button>
+                                            </form>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div @*style="display: flex; align-items: center"*@ class="modal fade" id="verifyCode" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                    <div class="modal-dialog" style="display: flex; justify-content: center">
+                                        <div class="modal-content" style="width: 400px; height: 450px">
+                                            <img src="~/assets/images/subimg/ohayoucinema.svg" class="rounded mx-auto d-block" alt="" style="margin-top: 2rem">
+                                            <p style="font-weight: 500; display: flex; margin-top: 1rem; justify-content: center;">Xác Thực Email</p>
+
+                                            <form class="verifyCode-form">
+                                                <span style="font-size: 13px; margin: 1rem 0;">
+                                                    Vui lòng nhập mã xác thực chúng tôi đã gửi vào email của bạn đã đăng ký.
+                                                </span>
+                                                <label style="color: rgb(119 119 119 /1); font-weight: 600; font-size: 12px">Verify Code</label>
+                                                <input name="verifyCode" type="text" required placeholder="Nhập mã xác thực" />
+                                                <span class="text-danger response-mess"></span>
+                                                <button type="submit">Xác nhận</button>
+                                            </form>
                                         </div>
                                     </div>
                                 </div>
@@ -457,8 +493,10 @@
 
     <script src="~/Areas/User/assets/js/moviedetail.js"></script>
     <script src="~/Areas/User/assets/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn-script.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="~/assets/js/ajax-functions.js?v=1"></script>
 </body>
 </html>
 
-<script src="https://cdn-script.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+
 
