--- a/Views/Shared/_LayoutPage1.cshtml
+++ b/Views/Shared/_LayoutPage1.cshtml
@@ -58,8 +58,8 @@
                             <ul class="sub-list-gr-1 list-group">
                                 <li><a href="/User/BookTicket/MovieType">Thể loại phim</a></li>
                                 <li><a href="/User/BookTicket/ActorList">Diễn viên</a></li>
-                                <li><a href="#">Đạo diễn</a></li>
-                                <li><a href="#">Bình luận phim</a></li>
+                                <li><a href="/User/BookTicket/DirectorList">Đạo diễn</a></li>
+                                @*<li><a href="#">Bình luận phim</a></li>*@
                             </ul>
                         </li>
 
@@ -67,7 +67,7 @@
                             Sự Kiện
                             <i class="ti-angle-down down-btn"></i>
                             <ul class="sub-list-gr-1 list-group">
-                                <li><a href="#">Ưu đãi</a></li>
+                                @*<li><a href="#">Ưu đãi</a></li>*@
                                 <li><a href="/User/BookTicket/BestMovie">Phim hay tháng</a></li>
                             </ul>
                         </li>
